# semantic-datagov-metadata-profiler

./: .gitignore  README.md  pyproject.toml
examples/: sample_cluster_output.csv  sample_input_metadata.json  sample_report.md
examples/case_studies/harassment_bullying/: expected_report.md  metadata.json  resource_sample.csv
src/datagov_profiler/: __init__.py  cli.py  cluster.py  dcat_mapping.py  domain_summary.py  fetch.py  field_roles.py  flatten.py  harvest.py  models.py  normalize.py  report.py  resources.py  terms.py  validation.py
tests/: test_cli.py  test_cluster.py  test_dcat_mapping.py  test_fetch.py  test_field_roles.py  test_flatten_dcat.py  test_normalize.py  test_report.py  test_resources.py  test_validation.py  test_zip_resources.py
tests/fixtures/: catalog_records.jsonl  resource_sample.csv  sample_records.jsonl
