[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-datagov-metadata-profiler"
version = "0.1.0"
description = "Profile semantic heterogeneity in Data.gov metadata records."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Open Source Contributors" }]
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "pydantic>=2.0",
  "typer>=0.12",
  "rich>=13.0",
  "scikit-learn>=1.3",
  "rapidfuzz>=3.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
embeddings = [
  "sentence-transformers>=2.7",
]

[project.scripts]
datagov-profiler = "datagov_profiler.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest-tmp -p no:cacheprovider"
